Fix: Css styling on mobile

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -3593,6 +3593,10 @@ select {
   width: auto;
 }
 
+.w-1\/3 {
+  width: 33.3333%;
+}
+
 .w-1\/2 {
   width: 50%;
 }
